# PresenningExG

./: CMakeLists.txt  README.md  presenningExg.cpp  presenningExg.h
